crates/cli/tests/snapshots/run_node_test__typescript__out_dir__doesnt_route_to_cache_if_disabled.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 1277
expression: "read_to_string(fixture.path().join(\"out-dir-routing/tsconfig.json\")).unwrap()"
---
{
  "compilerOptions": {
    "outDir": "./dts"
  }
}

