crates/cli/tests/snapshots/run_node_test__typescript__out_dir__routes_to_cache.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 1123
expression: "read_to_string(fixture.path().join(\"out-dir-routing/tsconfig.json\")).unwrap()"
---
{
  "compilerOptions": {
    "outDir": "../.moon/cache/types/out-dir-routing"
  }
}

